--- a/index.html
+++ b/index.html
@@ -13,71 +13,77 @@
     />
 
     <title>WebStudio</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul>
+    <header class="page-header">
+      <nav class="list header-nav">
+        <a href="./index.html" class="logo" lang="en"><span class="accent">Web</span>Studio</a>
+        <ul class="list nav-links">
           <li>
-            <a href="">Студия</a>
+            <a href="./index.html" class="nav-link active">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="nav-link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list header-contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <main>
       <!-- главный баннер -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <input type="button" value="Заказать услугу" />
+      <section class="hero">
+        <h1 class="homepage-headline">Эффективные решения для вашего бизнеса</h1>
+        <input type="button" value="Заказать услугу" class="button button-main" />
       </section>
 
       <!-- преимущества -->
-      <section>
-        <h2>Преимущества</h2>
-        <ul>
+      <section class="advantages">
+        <h2 style="display: none">Преимущества</h2>
+        <ul class="list advantages-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="item-title">Внимание к деталям</h3>
+            <p class="item-descr">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="item-title">Пунктуальность</h3>
+            <p class="item-descr">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="item-title">Планирование</h3>
+            <p class="item-descr">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="item-title">Современные технологии</h3>
+            <p class="item-descr">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
       <!-- чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/box1.jpg" alt="Процесс написания кода" width="370" />
           </li>
@@ -91,42 +97,43 @@
       </section>
 
       <!-- команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list team-list">
           <li>
             <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="item-title">Игорь Демьяненко</h3>
+            <p class="item-descr">Product Designer</p>
           </li>
           <li>
             <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="item-title">Ольга Репина</h3>
+            <p class="item-descr">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="item-title">Николай Тарасов</h3>
+            <p class="item-descr">Marketing</p>
           </li>
           <li>
             <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="item-title">Михаил Ермаков</h3>
+            <p class="item-descr">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+
+    <footer class="page-footer">
+      <a href="./index.html" class="logo" lang="en"><span class="accent">Web</span>Studio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
+        <p class="addr">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list contacts">
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="contact-link">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
