--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="list header-nav">
+      <nav class="header-nav">
         <a href="./index.html" class="logo" lang="en"><span class="accent">Web</span>Studio</a>
         <ul class="list nav-links">
           <li>
